# pdf-generator-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.circleci/: config.yml
.github/workflows/: rust.yml
src/: app.rs  main.rs
terraform/: main.tf  variables.tf
terraform/.terraform/: terraform.tfstate
terraform/.terraform/modules/: modules.json
terraform/modules/ec2/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf
terraform/modules/internet-gateway/: outputs.tf  variables.tf
terraform/modules/public-subnet/: outputs.tf  variables.tf
terraform/modules/route-table/: outputs.tf  variables.tf
terraform/modules/vpc/: variables.tf
