[package]
name = "pdf-generator-rs"
version = "0.1.0"
authors = ["&bigbang <thebigbangfirst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
warp = "0.2.1"
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4"
pretty_env_logger = "0.4"
fantoccini = "0.13.1"

[dependencies.tokio]
version = "0.2.6"
features = ["macros", "fs"]

[[bin]]
name = "pdf-generator-rs"
path = "src/main.rs"
